--- a/src/Components/Input/Styles/Input.module.css
+++ b/src/Components/Input/Styles/Input.module.css
@@ -3,11 +3,11 @@
   background-color: rgba(0, 0, 0, 0.5);
   display: flex;
   padding: 10px;
-  justify-content: space-between;
+  justify-content: space-evenly;
   align-items: center;
   margin: auto;
   margin-top: 0px;
-  width: 90%;
+  width: 100%;
 }
 .Input .MoodBall {
   border-radius: 50%;
@@ -16,7 +16,6 @@
   height: 30px;
 }
 .Input .SearchInput {
-  box-shadow: rgb(0, 0, 0) 3px 3px 6px 0px inset, rgba(0, 0, 0, 0.5) -3px -3px 6px 1px inset;
   border: none;
   background-color: rgba(0, 0, 0, 0.5);
   display: flex;
@@ -26,7 +25,7 @@
   font-family: sans-serif;
   font-size: 18px;
   font-weight: 400;
-  width: 60%;
+  width: 80%;
 }
 .Input .SearchButton {
   border: none;
