--- a/src/Components/Input/Styles/Input.module.scss
+++ b/src/Components/Input/Styles/Input.module.scss
@@ -4,13 +4,13 @@
     display: flex;
 
     padding: 10px;
-    justify-content: space-between;
+    justify-content: space-evenly;
     align-items: center;
 
     margin: auto;
     margin-top: 0px;
 
-    width: 90%;
+    width: 100%;
 
     .MoodBall {
         border-radius: 50%;
@@ -22,7 +22,7 @@
     }
 
     .SearchInput {
-        box-shadow: rgb(0, 0, 0) 3px 3px 6px 0px inset, rgba(0, 0, 0, 0.5) -3px -3px 6px 1px inset;
+        // box-shadow: rgba(0, 0, 0, 0.4) 0px 2px 4px, rgba(0, 0, 0, 0.3) 0px 7px 13px -3px, rgba(0, 0, 0, 0.2) 0px -3px 0px inset;
         border: none;
         background-color:  rgba(0, 0, 0, .5);
 
@@ -36,7 +36,7 @@
         font-size: 18px;
         font-weight: 400;
 
-        width: 60%;
+        width: 80%;
 
 
     }
