--- a/src/Components/Input/Styles/Input.module.css
+++ b/src/Components/Input/Styles/Input.module.css
@@ -11,7 +11,7 @@
 }
 .Input .MoodBall {
   border-radius: 50%;
-  background-color: #fffc00;
+  background-color: #f20407;
   width: 30px;
   height: 30px;
 }
