--- a/src/Components/Display/Styles/Display.module.scss
+++ b/src/Components/Display/Styles/Display.module.scss
@@ -1,21 +1,20 @@
 
 
 .GeneralDataBox{
-    border: 1px solid white;
-
     display: flex;
 
     position: relative;
 
     padding: 10px;
+    justify-content: space-between;
     align-items: center;
+    overflow: hidden;
 
     margin: auto;
 
     width: 100%;
 
     .ConTempLatLon {
-        border: 1px solid white;
 
         display: flex;
         flex-direction: column;
@@ -63,7 +62,7 @@
         font-weight: 400;
 
         position: absolute;
-        right: -70px;
+        right: -40px;
 
         transform: rotate(-90deg);
     }
