--- a/src/Components/Input/Styles/Input.module.scss
+++ b/src/Components/Input/Styles/Input.module.scss
@@ -15,7 +15,7 @@
     .MoodBall {
         border-radius: 50%;
 
-        background-color: #fffc00;
+        background-color: #f20407;
 
         width: 30px;
         height: 30px;
