--- a/src/Components/Display/Styles/Display.module.css
+++ b/src/Components/Display/Styles/Display.module.css
@@ -1,4 +1,5 @@
 .GeneralDataBox {
+  box-shadow: rgba(0, 0, 0, 0.4) 0px 2px 4px, rgba(0, 0, 0, 0.3) 0px 7px 13px -3px, rgba(0, 0, 0, 0.2) 0px -3px 0px inset;
   display: flex;
   position: relative;
   padding: 10px;
@@ -6,6 +7,7 @@
   align-items: center;
   overflow: hidden;
   margin: auto;
+  height: 230px;
   width: 100%;
 }
 .GeneralDataBox .ConTempLatLon {
@@ -29,6 +31,7 @@
   font-family: sans-serif;
   font-size: 100px;
   font-weight: 400;
+  transition: 0.5s;
 }
 .GeneralDataBox .ConTempLatLon .LatLon {
   display: flex;
@@ -48,4 +51,21 @@
   position: absolute;
   right: -40px;
   transform: rotate(-90deg);
+}
+
+@media only screen and (max-width: 560px) {
+  .GeneralDataBox .ConTempLatLon .Temperature {
+    font-size: 80px;
+  }
+  .GeneralDataBox .Description {
+    font-size: 25px;
+  }
+}
+@media only screen and (max-width: 380px) {
+  .GeneralDataBox .ConTempLatLon .Temperature {
+    font-size: 70px;
+  }
+  .GeneralDataBox .Description {
+    font-size: 20px;
+  }
 }/*# sourceMappingURL=Display.module.css.map */
