--- a/src/Components/Input/Styles/Input.module.css
+++ b/src/Components/Input/Styles/Input.module.css
@@ -11,6 +11,7 @@
 }
 .Input .MoodBall {
   border-radius: 50%;
+  display: flex;
   background-color: #f20407;
   width: 30px;
   height: 30px;
@@ -39,4 +40,15 @@
   font-family: sans-serif;
   font-size: 18px;
   font-weight: 400;
+}
+
+@media only screen and (max-width: 620px) {
+  .Input {
+    flex-direction: column;
+    gap: 8px;
+    align-items: flex-start;
+  }
+  .Input .SearchInput {
+    width: 100%;
+  }
 }/*# sourceMappingURL=Input.module.css.map */
