--- a/src/Components/Input/Styles/Input.module.scss
+++ b/src/Components/Input/Styles/Input.module.scss
@@ -14,6 +14,7 @@
 
     .MoodBall {
         border-radius: 50%;
+        display: flex;
 
         background-color: #f20407;
 
@@ -56,5 +57,18 @@
             font-size: 18px;
             font-weight: 400;
         }
+    }
+}
+
+@media only screen and (max-width: 620px) {
+    .Input {
+        flex-direction: column;
+        gap: 8px;
+        align-items: flex-start;
+
+        .SearchInput {
+            width: 100%;
+        }
+
     }
 }
