--- a/src/Views/Dashboard/Styles/Dashboard.module.css
+++ b/src/Views/Dashboard/Styles/Dashboard.module.css
@@ -7,5 +7,11 @@
   justify-content: center;
   align-items: center;
   height: 100vh;
-  width: 50%;
+  width: 900px;
+}
+
+@media only screen and (max-width: 900px) {
+  .Dashboard {
+    width: 100%;
+  }
 }/*# sourceMappingURL=Dashboard.module.css.map */
