--- a/src/Views/Dashboard/Styles/Dashboard.module.scss
+++ b/src/Views/Dashboard/Styles/Dashboard.module.scss
@@ -15,6 +15,12 @@
 
 
     height: 100vh;
-    width: 50%;
+    width: 900px;
 
+}
+
+@media only screen and (max-width: 900px) {
+    .Dashboard {
+        width: 100%;
+    }
 }
