--- a/src/Components/Map/Styles/Map.module.css
+++ b/src/Components/Map/Styles/Map.module.css
@@ -6,6 +6,7 @@
   margin-left: 0px;
   height: 250px;
   width: 80%;
+  transform: 0.5s;
 }
 .Map .Diffuser {
   background-color: rgba(0, 0, 0, 0.2);
@@ -22,4 +23,10 @@
   width: 100%;
   -o-object-fit: cover;
      object-fit: cover;
+}
+
+@media only screen and (max-width: 550px) {
+  .Map {
+    width: 100%;
+  }
 }/*# sourceMappingURL=Map.module.css.map */
