--- a/src/Components/Map/Styles/Map.module.scss
+++ b/src/Components/Map/Styles/Map.module.scss
@@ -12,6 +12,8 @@
     height: 250px;
     width: 80%;
 
+    transform: .5s;
+
     .Diffuser {
         background-color: rgba(0, 0, 0, 0.2);
         position: absolute;
@@ -27,5 +29,11 @@
         height: 100%;
         width: 100%;
         object-fit: cover;
+    }
+}
+
+@media only screen and (max-width: 550px) {
+    .Map {
+        width: 100%;
     }
 }
