--- a/src/Views/Dashboard/Styles/Dashboard.module.css
+++ b/src/Views/Dashboard/Styles/Dashboard.module.css
@@ -4,8 +4,8 @@
   display: flex;
   flex-direction: column;
   padding: 10px;
+  gap: 20px;
   justify-content: center;
-  align-items: center;
   height: 100vh;
   width: 900px;
 }
