--- a/src/Views/Dashboard/Styles/Dashboard.module.scss
+++ b/src/Views/Dashboard/Styles/Dashboard.module.scss
@@ -9,9 +9,8 @@
     flex-direction: column;
 
     padding: 10px;
+    gap: 20px;
     justify-content: center;
-    align-items: center;
-
 
 
     height: 100vh;
